tests/negative/neg_pr113_mixed_constraints.safe
package neg_pr113_mixed_constraints
   type packet (active : boolean = true, kind : character = 'A', count : integer = 0) is
      record
         value : integer;

   p : packet (true, kind = 'A', count = 1) = (value = 1);

